JMX config sticky, read backs truth, avoids unnecessary retransforms, hardened weaving, new tests